crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__anchors_with_quantified_anonymous.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Test = (array (identifier) . ","?)
---
[strings]
S0 "Beauty will save the world"
S1 "Test"
S2 "array"
S3 "identifier"
S4 ","

[type_defs]
T0 = <Void>

[type_members]

[type_names]
N0: S1 → T0  ; Test

[entrypoints]
Test = 06 :: T0

[transitions]
_ObjWrap:
  00  -ε-  [Obj]                            02
  02       Trampoline                       03
  03  -ε-  [EndObj]                         05
  05                                        ▶

Test:
  06   !   (array)                          08
  07  ─‣┘  _                                10
  08  └‣─  _                                16, 18
  10                                        ▶
  11   !   ","                              07
  12  ─‣─  _                                11, 12
  14  ─◦─  _                                11, 12
  16   !   (identifier)                     14, 07
  18  ─‣─  _                                16, 18
