crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__anchors_with_ref_to_anonymous.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Comma = ","
Test = (array (Comma) . (string) @next)
---
[strings]
S0 "Beauty will save the world"
S1 "next"
S2 "Comma"
S3 "Test"
S4 ","
S5 "array"
S6 "string"

[type_defs]
T0 = <Void>
T1 = <Node>
T2 = Struct  M0:1  ; { next }

[type_members]
M0: S1 → T1  ; next: <Node>

[type_names]
N0: S2 → T0  ; Comma
N1: S3 → T2  ; Test

[entrypoints]
Comma = 06 :: T0
Test  = 08 :: T2

[transitions]
_ObjWrap:
  00  -ε-  [Obj]                            02
  02       Trampoline                       03
  03  -ε-  [EndObj]                         05
  05                                        ▶

Comma:
  06   !   ","                              07
  07                                        ▶

Test:
  08   !   (array)                          09
  09  └‣─  _                                15, 16
  11  ─◦─  (string) [Node Set(M0)]          13
  13  ─‣┘  _                                14
  14                                        ▶
  15   !   (Comma)                          06 : 11
  16  ─‣─  _                                15, 16
