crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__anchors_with_sequence_anonymous.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Test = (array (identifier) . {"," (string)})
---
[strings]
S0 "Beauty will save the world"
S1 "Test"
S2 "array"
S3 "identifier"
S4 ","
S5 "string"

[type_defs]
T0 = <Void>

[type_members]

[type_names]
N0: S1 → T0  ; Test

[entrypoints]
Test = 06 :: T0

[transitions]
_ObjWrap:
  00  -ε-  [Obj]                            02
  02       Trampoline                       03
  03  -ε-  [EndObj]                         05
  05                                        ▶

Test:
  06   !   (array)                          08
  07  ...  
  08  └‣─  _                                14, 16
  10  ─‣─  (string)                         11
  11  ─‣┘  _                                12
  12                                        ▶
  13  ─◦─  ","                              10
  14   !   (identifier)                     13
  15  ...  
  16  ─‣─  _                                14, 16
