crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__captures_nested_flat.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Test = (array (array (identifier) @c) @b) @a
---
[strings]
S0 "Beauty will save the world"
S1 "a"
S2 "b"
S3 "c"
S4 "Test"
S5 "array"
S6 "identifier"

[type_defs]
T0 = <Node>
T1 = Struct  M0:3  ; { a, b, c }

[type_members]
M0: S1 → T0  ; a: <Node>
M1: S2 → T0  ; b: <Node>
M2: S3 → T0  ; c: <Node>

[type_names]
N0: S4 → T1  ; Test

[entrypoints]
Test = 06 :: T1

[transitions]
_ObjWrap:
  00  -ε-  [Obj]                            02
  02       Trampoline                       03
  03  -ε-  [EndObj]                         05
  05                                        ▶

Test:
  06   !   (array) [Node Set(M0)]           08
  08  └‣─  (array) [Node Set(M1)]           10
  10  └‣─  (identifier) [Node Set(M2)]      12
  12  ─‣┘² _                                13
  13                                        ▶
