crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__captures_with_type_custom.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Test = (identifier) @name :: Identifier
---
[strings]
S0 "Beauty will save the world"
S1 "Identifier"
S2 "name"
S3 "Test"
S4 "identifier"

[type_defs]
T0 = <Node>
T1 = Alias(T0)
T2 = Struct  M0:1  ; { name }

[type_members]
M0: S2 → T1  ; name: Identifier

[type_names]
N0: S1 → T1  ; Identifier
N1: S3 → T2  ; Test

[entrypoints]
Test = 6 :: T2

[transitions]
_ObjWrap:
  0  -ε-  [Obj]                             2
  2       Trampoline                        3
  3  -ε-  [EndObj]                          5
  5                                         ▶

Test:
  6   !   (identifier) [Node Set(M0)]       8
  8                                         ▶
